# recommandation_movies

./: README.md  pyproject.toml  requirements.txt
Projet_recommandation_film/conception/fonctionnalites/: Seance_du_moment.md  f1_afficher_un_film.md  f6_compte_client.md
Projet_recommandation_film/conception/personas/: gilles_masson.md  jean_michel_lemoine.md  line.md  personna.md
Projet_recommandation_film/conception/scenarios/: senario_line.md
Projet_recommandation_film/data/clean/: Untitled.ipynb  etapes_cleaning.txt
conception/fonctionnalites/: Recherche_film.md  f4_afficher_une_liste_de_film.md  fonctionnalite_historique_de_navigation.md  fonctionnalité_recommandation_film.md
data/clean/: tmdb_final.csv  tmdb_selected.csv
src/: Accueil.py  main.py
src/components/: hero.py  movie_card.py  random_movies_section.py  search_bar.py  show_one_movie.py  stiker.py
src/data/: first_clean.py  load_csv.py  save_dataframe_to_csv.py
src/features/: build_response.py  clean_list_column.py  fetch_movie_details.py  random_movies.py  recommender.py  recommender_cache.py  transform_columns.py  utils.py
src/notebook/: Untitled.ipynb  exploring.ipynb  films_fr.ipynb  merging_data.ipynb
src/pages/: 1_Visualisation_Dataset.py
utils/: commande_git.md  commande_python.md  commande_sql.md  pull_request_temlplate.md
