[project]
name = "cinema-de-la-cite"
version = "0.1.0"
description = "Projet 2 Data Analyst WildCodeSchool"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "duckdb>=1.4.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pytest>=9.0.1",
    "seaborn>=0.13.2",
    "streamlit>=1.52.1",
]
